# codebase-intel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codebase-intel/intents/: INT-001.yaml  INT-002.yaml  INT-003.yaml
.github/workflows/: ci.yml  publish.yml
community-contracts/: fastapi.yaml  nodejs-express.yaml  react-typescript.yaml
docs/: COMPARISON.md
launch/: awesome_list_submissions.md  devto_article.md  hackernews.md  reddit_claudeai.md  reddit_python.md  x_thread.md
src/codebase_intel/: __init__.py
src/codebase_intel/analytics/: __init__.py  benchmark.py  feedback.py  tracker.py
src/codebase_intel/cli/: __init__.py  main.py
src/codebase_intel/contracts/: __init__.py  auto_generator.py  evaluator.py  models.py  registry.py
src/codebase_intel/core/: __init__.py  config.py  exceptions.py  types.py
src/codebase_intel/crossrepo/: __init__.py  models.py  registry.py  scanner.py
src/codebase_intel/decisions/: __init__.py  miner.py  models.py  store.py
src/codebase_intel/drift/: __init__.py  detector.py
src/codebase_intel/graph/: __init__.py  builder.py  parser.py  query.py  storage.py
src/codebase_intel/intent/: __init__.py  models.py  store.py  verifier.py
src/codebase_intel/mcp/: __init__.py  server.py
src/codebase_intel/orchestrator/: __init__.py  assembler.py
src/codebase_intel/workspace/: __init__.py  manager.py  registry.py
tests/: conftest.py
tests/integration/: test_graph_pipeline.py
tests/unit/contracts/: test_evaluator.py  test_models.py
tests/unit/core/: test_exceptions.py  test_types.py
tests/unit/decisions/: test_models.py  test_store.py
tests/unit/drift/: test_detector.py
tests/unit/graph/: test_parser.py  test_storage.py
tests/unit/orchestrator/: test_assembler.py
tests/unit/workspace/: test_manager.py  test_registry.py  test_server_integration.py
